--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,14 @@
     <PackageVersion  Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageVersion  Include="xunit" Version="2.5.3" />
     <PackageVersion  Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageVersion  Include="Aspire.Hosting.AppHost" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="8.2.2" />
+    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+    <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
   </ItemGroup>
 
   <!--Apply format code with csharpier-->
