--- a/src/WeatherForcast/WeatherForcast.csproj
+++ b/src/WeatherForcast/WeatherForcast.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="MinimalApi.Endpoint" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
