--- a/src/WeatherForcast/WeatherForcast.csproj
+++ b/src/WeatherForcast/WeatherForcast.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\..\AspireProjects\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
