Configure Aspire and projects (#2)
* Install and configure Aspire
* Configure service projects to use Aspire

--- a/src/WeatherForcast/WeatherForcast.csproj
+++ b/src/WeatherForcast/WeatherForcast.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="MinimalApi.Endpoint" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AspireProjects\ServiceDefaults\ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
