--- a/src/CityProvider/CityProvider.csproj
+++ b/src/CityProvider/CityProvider.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>$(SdkTargetFramework)</TargetFramework>
@@ -10,6 +10,10 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
         <PackageReference Include="MinimalApi.Endpoint" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\AspireProjects\ServiceDefaults\ServiceDefaults.csproj" />
     </ItemGroup>
 
 </Project>
