--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,6 +26,9 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
+    <PackageVersion Include="FluentAssertions" Version="6.12.1" />
+    <PackageVersion Include="Xunit.DependencyInjection" Version="9.6.0" />
+    <PackageVersion Include="PactNet" Version="5.0.0" />
   </ItemGroup>
 
   <!--Apply format code with csharpier-->
