--- a/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
+++ b/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(SdkTargetFramework)</TargetFramework>
@@ -11,9 +11,15 @@
   </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="Xunit.DependencyInjection" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="PactNet" />
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.runner.visualstudio" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\WeatherForcast\WeatherForcast.csproj" />
     </ItemGroup>
 
   <ItemGroup>
