--- a/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
+++ b/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
@@ -14,12 +14,15 @@
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="Xunit.DependencyInjection" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="PactNet" />
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="PactNet" />
+        <PackageReference Include="PactNet.Output.Xunit" />
+        <PackageReference Include="FluentAssertions.Json" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\src\WeatherForcast\WeatherForcast.csproj" />
+      <ProjectReference Include="..\ProvidersPactStates\ProvidersPactStates.csproj" />
     </ItemGroup>
 
   <ItemGroup>
