--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -32,6 +32,10 @@
     <PackageVersion Include="PactNet.Output.Xunit" Version="1.0.0" />
     <PackageVersion Include="PactNet.Abstractions" Version="5.0.0" />
     <PackageVersion Include="FluentAssertions.Json" Version="6.1.0" />
+    <PackageVersion Include="dotenv.net" Version="3.2.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
   </ItemGroup>
 
   <!--Apply format code with csharpier-->
