--- a/src/WeatherForcast/WeatherForcast.csproj
+++ b/src/WeatherForcast/WeatherForcast.csproj
@@ -10,10 +10,18 @@
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
       <PackageReference Include="Swashbuckle.AspNetCore" />
       <PackageReference Include="MinimalApi.Endpoint" />
+      <PackageReference Include="dotenv.net" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\AspireProjects\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Shared\DemoConfigurations\DemoConfigurations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
