--- a/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
+++ b/test/WeatherForcastContractTests/WeatherForcastContractTests.csproj
@@ -21,12 +21,19 @@
         <PackageReference Include="FluentAssertions.Json" />
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Shared\DemoConfigurations\DemoConfigurations.csproj" />
       <ProjectReference Include="..\..\src\WeatherForcast\WeatherForcast.csproj" />
       <ProjectReference Include="..\ProvidersPactStates\ProvidersPactStates.csproj" />
     </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
