Add TemperatureServiceContractTests project (no consumer test yet)

--- a/test/PactReferences/PactReferences.csproj
+++ b/test/PactReferences/PactReferences.csproj
@@ -8,5 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="PactNet.Abstractions" />
+        <PackageReference Include="PactNet.Output.Xunit" />
+        <PackageReference Include="xunit.abstractions" />
     </ItemGroup>
 </Project>
