--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -32,6 +32,7 @@
     <PackageVersion  Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion  Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageVersion  Include="xunit" Version="2.5.3" />
+    <PackageVersion  Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion  Include="xunit.runner.visualstudio" Version="2.5.3" />
     <PackageVersion  Include="Aspire.Hosting.AppHost" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
