Centralize demo configuration.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-﻿WEATHER_FORCAST_DEMO_CASE=HappyPath
+﻿PACTDEMO_DEMOCASE=HappyPath
+PACTDEMO_PACTLOGLEVEL=Error
+PACTDEMO_PACTFOLDER="../../../../pacts"
