--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ﻿PACTDEMO_DEMOCASE=HappyPath
 PACTDEMO_PACTLOGLEVEL=Error
 PACTDEMO_PACTFOLDER="../../../../pacts"
+PACTDEMO_AUTHENTICATIONKEY="RP^zOV9JQMssmntkHWj%hwq*ld4zsBzs"
