--- a/src/WeatherForcast/appsettings.json
+++ b/src/WeatherForcast/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeatherForcastOptions": {
+    "CityServiceBaseAddress": "https+http://cityservice",
+    "TemperatureServiceBaseAddress": "https+http://temperatureservice"
+  }
 }
