wip: - Replace Authorization Header in PACT injection - CityService fail on error decoding response body

--- a/src/Shared/AuthenticationService/AuthenticationService.csproj
+++ b/src/Shared/AuthenticationService/AuthenticationService.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\AspireProjects\ServiceDefaults\ServiceDefaults.csproj" />
     <ProjectReference Include="..\DemoConfigurations\DemoConfigurations.csproj" />
+    <ProjectReference Include="..\JWTGenerator\JWTGenerator.csproj" />
   </ItemGroup>
 
 </Project>
