CityService: Add authorization and authentication  (#11)
* Add authorization and authentication on CityService and a contract test injecting the token

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ﻿PACTDEMO_DEMOCASE=HappyPath
-PACTDEMO_PACTLOGLEVEL=Error
+PACTDEMO_PACTLOGLEVEL=Trace
 PACTDEMO_PACTFOLDER="../../../../pacts"
+PACTDEMO_AUTHENTICATIONKEY="RP^zOV9JQMssmntkHWj%hwq*ld4zsBzs"
