--- a/test/CityServiceContractTests/CityServiceContractTests.csproj
+++ b/test/CityServiceContractTests/CityServiceContractTests.csproj
@@ -17,23 +17,19 @@
           <PackageReference Include="xunit" />
           <PackageReference Include="xunit.runner.visualstudio" />
           <PackageReference Include="PactNet" />
+          <PackageReference Include="PactNet.Output.Xunit" />
           <PackageReference Include="dotenv.net" />
       </ItemGroup>
 
       <ItemGroup>
         <ProjectReference Include="..\..\src\CityService\CityService.csproj" />
         <ProjectReference Include="..\..\src\Shared\DemoConfigurations\DemoConfigurations.csproj" />
+        <ProjectReference Include="..\..\src\Shared\JWTGenerator\JWTGenerator.csproj" />
         <ProjectReference Include="..\PactReferences\PactReferences.csproj" />
       </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update=".env">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
