--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,9 +31,9 @@
     <PackageVersion  Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
     <PackageVersion  Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion  Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageVersion  Include="xunit" Version="2.5.3" />
+    <PackageVersion  Include="xunit" Version="2.9.2" />
     <PackageVersion  Include="xunit.abstractions" Version="2.0.3" />
-    <PackageVersion  Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageVersion  Include="xunit.runner.visualstudio" Version="2.8.2" />
     <PackageVersion  Include="Aspire.Hosting.AppHost" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="8.2.2" />
@@ -56,6 +56,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Authorization" Version="8.0.10" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
+    <PackageVersion Include="Verify.Xunit" Version="28.2.1" />
   </ItemGroup>
 
   <!--Apply format code with csharpier-->
