Inject policy names instead of PolicyBuilder

--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
-﻿PACTDEMO_DEMOCASE=HappyPath
-PACTDEMO_PACTLOGLEVEL=Error
-PACTDEMO_PACTFOLDER="../../../../pacts"
-PACTDEMO_AUTHENTICATIONKEY="RP^zOV9JQMssmntkHWj%hwq*ld4zsBzs"
+﻿# To apply the changes, you need to rebuild the solution (build is not enough)
+
+## The demo case to apply
+PACTDEMO_DEMOCASE = HappyPath
+
+## The PACT log level
+PACTDEMO_PACTLOGLEVEL = Error
+
+## The path to the PACT folder contracts
+PACTDEMO_PACTFOLDER = "../../../../pacts"
+
+## The shared authentication key between services and AuthenticationService (only for demo purpose)
+PACTDEMO_AUTHENTICATIONKEY = "RP^zOV9JQMssmntkHWj%hwq*ld4zsBzs"
+
+## if true, an inert AuthorizationPolicy is injected in DI bypassing contacting AuthenticationService. Otherwise use the default policy of CityService.
+PACTDEMO_DISABLE_CITYSERVICE_AUTHORIZATION = true
